# allium-mini

./: .gitignore  example_plotting_script.py  main.py
allium/: __init__.py  data.py  simulate.py  summstats.py  utils.py
cell_sim/: CMakeLists.txt  README.md
cell_sim/include/config/: Parameters.h  parameters.json
cell_sim/src/: main.cpp
cell_sim/src/bindings/: Interface.cpp  Interface.h  Measure.cpp  Measure.h  bindings.cpp
cell_sim/src/io/: Output.cpp  Output.h
cell_sim/src/system/: Domain.cpp  Domain.h  Dynamics.cpp  Dynamics.h  Particle.cpp  Particle.h  Population.cpp  Population.h  Simulation.cpp  Simulation.h
cell_sim/src/system/potentials/: Interaction.cpp  Interaction.h  Potential.cpp  Potential.h  adhPotential.cpp  adhPotential.h  newPotential.cpp  newPotential.h
cell_sim/tests/: CMakeLists.txt  catch.hh  simulation_tests.cpp
